# batch_board_sw

./: .gitignore  .gitmodules  README.md
helper_scripts/: factor_ana.py
src/: README.md
src/.docker/: Dockerfile  start_docker.sh
src/data/results/: bias_log.csv  gps_log.csv  gt_log.csv  metrics_log.csv  optimized_log.csv
src/helper_scripts/: factor_ana.py  memory_ana.py
src/toyslam/: CMakeLists.txt  package.xml
src/toyslam/include/: ceres_logger.h  gnss_parser.h  gnss_tools.h  imu_factor.h  imu_preint.h  utility.h
src/toyslam/launch/: batch_board.launch  batch_board_docker.launch
src/toyslam/rviz/: gps_trajectory.rviz
src/toyslam/src/: gnss_imu_sw_node.cpp
toyslam/: package.xml
toyslam/src/: gnss_imu_sw_node.cpp
