<?xml version="1.0"?>
<package format="2">
  <name>toyslam</name>
  <version>0.0.0</version>
  <description>The toyslam package</description>
  
  <maintainer email="wws@todo.todo">wws</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <!-- Build dependencies -->
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>xmlrpcpp</build_depend>
  <build_depend>novatel_msgs</build_depend>
  <build_depend>gnss_comm</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>ceres-solver</build_depend>
  <build_depend>boost</build_depend>
  <build_depend>libtbb-dev</build_depend>
  
  <!-- Build export dependencies -->
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>tf2_ros</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>visualization_msgs</build_export_depend>
  <build_export_depend>xmlrpcpp</build_export_depend>
  <build_export_depend>novatel_msgs</build_export_depend>
  <build_export_depend>gnss_comm</build_export_depend>
  <build_export_depend>eigen</build_export_depend>
  <build_export_depend>ceres-solver</build_export_depend>
  <build_depend>nlosexclusion</build_depend>
  
  <!-- Exec dependencies -->
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>xmlrpcpp</exec_depend>
  <exec_depend>novatel_msgs</exec_depend>
  <exec_depend>gnss_comm</exec_depend>
  <exec_depend>eigen</exec_depend>
  <exec_depend>ceres-solver</exec_depend>
  <exec_depend>boost</exec_depend>
  <exec_depend>libtbb-dev</exec_depend>
  <exec_depend>nlosexclusion</exec_depend>

  <!-- Add these build and run dependencies -->
<build_depend>tf</build_depend>
<exec_depend>tf</exec_depend>

  <export>
  </export>
</package>